--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 /*common shared style*/
-body{
+body {
   font-family: 'Open Sans', sans-serif;
 }
-.btn-primary{
+
+.btn-primary {
   border-radius: 5px;
   background: #FD6E0A;
   border: 0;
@@ -11,46 +12,94 @@ body{
   font-weight: 700;
   padding: 15px 35px;
 }
+
+.title-section {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+
 /*nav css start*/
-nav{
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 200px;
 }
-nav ul{
+
+nav ul {
   display: flex;
   align-items: center;
 }
-nav li{
+
+nav li {
   list-style: none;
   margin-right: 50px;
 }
-nav a{
+
+nav a {
   text-decoration: none;
   color: #474747;
 }
 
-.logo{
-color: #181818;
-font-size: 45px;
-font-style: normal;
-font-weight: 800;
+.logo {
+  color: #181818;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 800;
 }
-.logo-color{
+
+.logo-color {
   color: #FD6E0A;
 }
+
 /*nav css end*/
 /*bannar part start*/
-.header{
-  background-color:#FFF8F3;
+.header {
+  background-color: #FFF8F3;
+  background-image: url('../images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-.bannar{
-  padding: 30px 30px 30px 150px;
+
+.bannar {
+  padding: 30px 30px 0px 150px;
   display: flex;
   align-items: center;
 }
-.bannar .bannar-picture{
+
+.bannar .bannar-picture {
   width: 500px;
+  margin-right: 20px;
 }
+
+.bannar-greating {
+  font-size: 45px;
+  margin: 0;
+}
+
+.bannar-title {
+  font-size: 85px;
+  font-weight: 700;
+  margin: 0;
+}
+
 /*bannar part end*/
+/*about part start*/
+.about {
+  padding: 130px;
+  border-radius: 10px;
+  background: #FFF8F3;
+  margin: 130px 0;
+}
+
+.about-descreption {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+/*about part end*/
