--- a/css/style.css
+++ b/css/style.css
@@ -102,16 +102,38 @@ nav a {
   font-weight: 400;
   line-height: 30px;
 }
-.about-info-con{
+
+.about-info-con {
   display: flex;
   justify-content: space-around;
 }
-.about-info-title{
+
+.about-info-title {
   margin: 0 0 0 20px;
   align-items: center;
 }
-.about-info-con{
+
+.about-info-con {
   margin-top: 0;
 }
 
 /*about part end*/
+/*what can i do part start*/
+.whit-i-do-desc {
+  text-align: center;
+}
+
+.what-i-do-icon {
+  display: flex;
+  gap: 24px;
+}
+
+.skill {
+  border-radius: 5px;
+  padding: 30px;
+  /* margin-left: 20px; */
+  background: #FFF;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/*what can i do part end*/
