added my resume section

--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,37 @@ nav a {
 }
 
 /*what can i do part end*/
+/*resume part start*/
+.resume-title {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.resume-content {
+  display: flex;
+  /* text-align: center; */
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.resume-con-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.resume-sub-title {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.resume-con-disc {
+  display: flex;
+  width: 511px;
+  flex-direction: column;
+}
+
+/*resume part end*/
