--- a/css/style.css
+++ b/css/style.css
@@ -169,8 +169,40 @@ nav a {
   width: 511px;
   flex-direction: column;
 }
-.resume-btn{
+
+.resume-btn {
   text-align: center;
+  margin-top: 20px;
 }
 
 /*resume part end*/
+/*footer part start*/
+footer {
+  display: flex;
+  background-color: #FFF8F3;
+  gap: 100px;
+  margin-top: 100px;
+ padding: 130px 200px;
+}
+.footer-colom{
+  width: 50%;
+}
+
+.footer-title {
+  color: #181818;
+  /* text-align: center; */
+  font-size: 35px;
+  font-weight: 700;
+}
+.contact input[type="text"], .contact input[type="email"], textarea{
+  display: block;
+  margin-bottom: 25px;
+  padding: 18px 35px;
+  color: #757575;
+  border-radius: 5px;
+  background: #fff;
+  border: 0;
+  width: 100%;
+}
+
+/*footer part end*/
